Update action dimension configurations in smolvla_sequential_base.yaml and train_smolvla_sequential.py to support a 32-dimensional action space. Add target_action_dim parameter for data adaptation in DataLoader functions. Include accelerate dependency in requirements_total.txt.

--- a/configs/policy/smolvla_sequential_base.yaml
+++ b/configs/policy/smolvla_sequential_base.yaml
@@ -39,7 +39,7 @@ policy:
 
   # 动作空间配置（Kuavo双臂16关节机器人）
   max_state_dim: 16 # Kuavo状态维度：16关节
-  max_action_dim: 16 # Kuavo动作维度：16关节（左臂7+左爪1+右臂7+右爪1）
+  max_action_dim: 32 # 使用预训练模型的32维动作空间
   chunk_size: 50 # 动作序列长度（Flow Matching生成50步）
   n_action_steps: 8 # 每次执行8步动作（与Diffusion策略一致）
 
@@ -78,6 +78,9 @@ training:
   output_directory: 'outputs/train/smolvla_sequential'
   device: 'cuda'
   seed: 42
+
+  # 动作维度适配配置
+  target_action_dim: 32 # 目标动作维度（与模型配置一致）
 
   # 数据加载
   batch_size: 16
