--- a/configs/policy/smolvla_sequential_base.yaml
+++ b/configs/policy/smolvla_sequential_base.yaml
@@ -38,10 +38,12 @@ policy:
   n_obs_steps: 1 # 使用当前帧（SmolVLA标准）
 
   # 动作空间配置（Kuavo双臂16关节机器人）
-  max_state_dim: 16 # Kuavo状态维度：16关节
-  max_action_dim: 32 # 使用预训练模型的32维动作空间（SmolVLA会自动填充16维数据到32维）
-  chunk_size: 50 # 动作序列长度（Flow Matching生成50步）
-  n_action_steps: 8 # 每次执行8步动作（与Diffusion策略一致）
+  # 注意：为了使用SmolVLA预训练权重，state/action维度必须与预训练模型一致（32维）
+  # Kuavo的16维数据会在数据加载时自动填充到32维（后16维填0）
+  max_state_dim: 32   # 使用预训练模型的32维状态空间
+  max_action_dim: 32  # 使用预训练模型的32维动作空间
+  chunk_size: 50      # 动作序列长度（Flow Matching生成50步）
+  n_action_steps: 8   # 每次执行8步动作（与Diffusion策略一致）
 
   # 图像预处理配置
   resize_imgs_with_padding: [512, 512] # SmolVLA标准输入尺寸
