--- a/configs/policy/tasks/task2_weighing.yaml
+++ b/configs/policy/tasks/task2_weighing.yaml
@@ -31,8 +31,8 @@ task:
 
     # 降低学习率（防遗忘策略）
     policy:
-      optimizer_lr: 0.00005  # 减半至0.00005
-      scheduler_warmup_steps: 500   # 减少warmup
+      optimizer_lr: 0.00005  # 减半至0.00005，保护任务1知识
+      scheduler_warmup_steps: 800   # 模型已经warm，但仍需适应
       scheduler_decay_steps: 20000  # 延长decay
 
   # Replay配置（防遗忘的关键）
