--- a/configs/policy/tasks/task3_placement.yaml
+++ b/configs/policy/tasks/task3_placement.yaml
@@ -31,8 +31,8 @@ task:
 
     # 进一步降低学习率
     policy:
-      optimizer_lr: 0.00003  # 进一步降低至0.00003
-      scheduler_warmup_steps: 300
+      optimizer_lr: 0.00003  # 进一步降低至0.00003，精细调整
+      scheduler_warmup_steps: 500   # 短暂适应即可
       scheduler_decay_steps: 25000
 
   # Replay配置
