--- a/configs/policy/tasks/task4_sorting.yaml
+++ b/configs/policy/tasks/task4_sorting.yaml
@@ -31,8 +31,8 @@ task:
 
     # 最低学习率（保持之前任务知识）
     policy:
-      optimizer_lr: 0.00002  # 最低学习率0.00002
-      scheduler_warmup_steps: 200
+      optimizer_lr: 0.00002  # 最低学习率0.00002，最精细的调整
+      scheduler_warmup_steps: 300   # 最短warmup，快速适应
       scheduler_decay_steps: 30000
 
   # Replay配置（最平衡的混合）
