--- a/configs/policy/smolvla_sequential_base.yaml
+++ b/configs/policy/smolvla_sequential_base.yaml
@@ -91,7 +91,7 @@ training:
   drop_last: True  # 保证每个batch大小一致，避免BN层统计偏差
 
   # 日志和保存
-  save_freq_epoch: 2  # 更频繁保存，避免丢失好的checkpoint
+  save_freq_epoch: 10  # 每10个epoch保存一次checkpoint
   log_freq: 10
 
   # 多任务验证配置（防遗忘的关键）
