--- a/configs/policy/smolvla_sequential_base.yaml
+++ b/configs/policy/smolvla_sequential_base.yaml
@@ -43,15 +43,15 @@ policy:
   # Kuavo的16维数据会在数据加载时自动填充到32维（后16维填0）
   max_state_dim: 32 # 使用预训练模型的32维状态空间
   max_action_dim: 32 # 使用预训练模型的32维动作空间
-  chunk_size: 50 # 动作序列长度（Flow Matching生成50步）
-  n_action_steps: 8 # 每次执行8步动作（与Diffusion策略一致）
+  chunk_size: 75 # 从50增加到75，更长动作序列帮助精确放置
+  n_action_steps: 10 # 从8增加到10，每次执行更多步
 
   # 图像预处理配置
   resize_imgs_with_padding: [512, 512] # SmolVLA标准输入尺寸
   empty_cameras: 0 # 不使用空相机占位
 
   # Flow Matching配置（SmolVLA使用Flow Matching而非Diffusion）
-  num_steps: 10 # 推理时的去噪步数
+  num_steps: 15 # 从10增加到15，生成更精确的动作
 
   # 归一化配置
   normalization_mapping:
@@ -68,12 +68,12 @@ policy:
   # 优化器基础配置（各任务会override学习率）
   optimizer_betas: [0.9, 0.95]
   optimizer_eps: 1.0e-08
-  optimizer_weight_decay: 1.0e-6  # VLM需要正则化防止过拟合
-  optimizer_grad_clip_norm: 1.0  # VLM embedding空间大，需要严格梯度控制
+  optimizer_weight_decay: 1.0e-6 # VLM需要正则化防止过拟合
+  optimizer_grad_clip_norm: 1.0 # VLM embedding空间大，需要严格梯度控制
 
   # 学习率调度器配置（各任务会override）
-  scheduler_warmup_steps: 1500  # VLM+Action Expert异构架构需要更长warmup
-  scheduler_decay_steps: 20000
+  scheduler_warmup_steps: 3000 # 从1500增加到3000，训练更稳定
+  scheduler_decay_steps: 40000 # 从20000增加到40000
   scheduler_decay_lr: 2.5e-6
 
 # ==================== 训练基础配置 ====================
@@ -86,17 +86,17 @@ training:
   target_action_dim: 32 # 目标动作维度（与预训练模型一致）
 
   # 数据加载
-  batch_size: 32  # VLM模仿学习最优batch size，平衡收敛速度和泛化性能
-  num_workers: 10  # 保持不变
-  drop_last: True  # 保证每个batch大小一致，避免BN层统计偏差
+  batch_size: 64 # 从32增加到64，更稳定的梯度更新
+  num_workers: 10 # 保持不变
+  drop_last: True # 保证每个batch大小一致，避免BN层统计偏差
 
   # 日志和保存
-  save_freq_epoch: 10  # 每10个epoch保存一次checkpoint
+  save_freq_epoch: 10 # 每10个epoch保存一次checkpoint
   log_freq: 10
 
   # 多任务验证配置（防遗忘的关键）
   validate_all_previous_tasks: True
-  validation_freq_epoch: 2 # 每2个epoch验证所有之前的任务
+  validation_freq_epoch: 1 # 从2改为1，更频繁验证及早发现问题
   validation_episodes: 20 # 更多验证episodes，评估更准确
 
 # ==================== 顺序训练策略配置 ====================
