--- a/configs/policy/tasks/task1_moving_grasp.yaml
+++ b/configs/policy/tasks/task1_moving_grasp.yaml
@@ -7,30 +7,31 @@ task:
   stage: 1 # Stage 1: 从预训练模型开始
 
   # 任务描述（中文）
-  description: '机器人从移动的传送带上抓取物体，放置于桌面后，再将其推送至指定区域内'
+  description: '机器人从移动的传送带上抓取物体，放置于桌面第一个目标位置后，再将其拿起至第二个目标位置'
 
   # Language Instruction（英文，SmolVLA使用）
   # 这个instruction会在每个batch中作为任务条件输入模型
-  language_instruction: 'Pick up the moving object from the conveyor belt, place it on the table, and push it to the designated area'
+  # 优化版本：明确描述目标位置的特征
+  language_instruction: 'Grasp the object from the conveyor belt using visual guidance. Place it precisely at the first marked target location on the table. Then grasp it again and place it precisely at the second marked target location on the table.'
 
   # 数据配置
   data:
     root: '/root/robot/data/task-1/1-2000/lerobot/'
     # root: '/mnt/e/robot/data/data/task1/lerobot/1-400/'
     repoid: 'lerobot/task1_moving_grasp'
-    episodes_to_use: [0, 500] # 使用1000个episodes
+    episodes_to_use: [0, 199] # 使用1000个episodes
 
   # 训练配置
   training:
-    max_epoch: 100 # 任务1训练100个epochs
+    max_epoch: 150 # 增加到150个epochs，让模型学习更多细节
 
     # Stage 1: 从HuggingFace预训练SmolVLA开始
     resume_from: 'pretrained'
     pretrained_path: 'lerobot/smolvla_base' # 使用镜像源下载的预训练模型
 
-    # 优化器配置（任务1使用标准学习率）
+    # 优化器配置（方案A保守优化 + batch_size 64调整）
     policy:
-      optimizer_lr: 0.0001 # 标准VLM fine-tuning学习率
-      scheduler_warmup_steps: 2000  # VLM需要更长warmup
-      scheduler_decay_steps: 30000
+      optimizer_lr: 0.00009 # 配合batch_size=64调整（原0.0001，因batch增大略降）
+      scheduler_warmup_steps: 3000 # 更长warmup，训练更稳定
+      scheduler_decay_steps: 40000 # 更长decay
 # 任务1没有replay配置（因为是第一个任务）
