--- a/configs/policy/tasks/task1_moving_grasp.yaml
+++ b/configs/policy/tasks/task1_moving_grasp.yaml
@@ -6,12 +6,12 @@ task:
   name: 'moving_grasp'
   stage: 1 # Stage 1: 从预训练模型开始
 
-  # 任务描述（中文）
-  description: '机器人从移动的传送带上抓取物体，放置于桌面后，再将其推送至指定区域内'
+  description: '机器人从移动的传送带上抓取物体，放置于桌面第一个目标位置后，再将其拿起至第二个目标位置'
 
   # Language Instruction（英文，SmolVLA使用）
   # 这个instruction会在每个batch中作为任务条件输入模型
-  language_instruction: 'Pick up the moving object from the conveyor belt, place it on the table, and push it to the designated area'
+  # 优化版本：明确描述目标位置的特征
+  language_instruction: 'Grasp the object from the conveyor belt using visual guidance. Place it precisely at the first marked target location on the table. Then grasp it again and place it precisely at the second marked target location on the table.'
 
   # 数据配置
   data:
@@ -31,6 +31,6 @@ task:
     # 优化器配置（任务1使用标准学习率）
     policy:
       optimizer_lr: 0.0001 # 标准VLM fine-tuning学习率
-      scheduler_warmup_steps: 2000  # VLM需要更长warmup
+      scheduler_warmup_steps: 2000 # VLM需要更长warmup
       scheduler_decay_steps: 30000
 # 任务1没有replay配置（因为是第一个任务）
