--- a/configs/policy/tasks/task4_sorting.yaml
+++ b/configs/policy/tasks/task4_sorting.yaml
@@ -3,14 +3,14 @@
 # 任务基本信息
 task:
   id: 4
-  name: "sorting"
-  stage: 4  # Stage 4: 最终多任务模型
+  name: 'sorting'
+  stage: 4 # Stage 4: 最终多任务模型
 
   # 任务描述（中文）
-  description: "机器人从指定起始点出发，移动至流利架前拾取工件，随后转身移动至放置架，将工件放置在物料筐内指定位置"
+  description: '机器人从指定起始点出发，移动至流利架前拾取工件，随后转身移动至放置架，将工件放置在物料筐内指定位置'
 
   # Language Instruction（英文）
-  language_instruction: "Move from the starting point to the rack, pick up the workpiece, turn around, move to the placement rack, and place it in the designated position in the material container"
+  language_instruction: 'Move from the starting point to the rack, pick up the workpiece, turn around, move to the placement rack, and place it in the designated position in the material container'
 
   # 数据配置
   data:
@@ -20,27 +20,26 @@ task:
 
   # 训练配置
   training:
-    max_epoch: 35  # 最复杂任务，最多epochs
+    max_epoch: 35 # 最复杂任务，最多epochs
 
     # Stage 4: 从任务3的最佳checkpoint继续
     # 格式: outputs/train/{task}/{method}/run_{timestamp}/best
     # 需要手动指定任务3的timestamp！
     resume_from: 'task'
     resume_task_id: 3
-    resume_path: 'outputs/train/task3_placement/smolvla_sequential/run_XXXXXX_XXXXXX/best'  # 修改XXXXXX为实际timestamp
+    resume_path: 'outputs/train/task3_placement/smolvla_sequential/run_XXXXXX_XXXXXX/best' # 修改XXXXXX为实际timestamp
 
     # 最低学习率（保持之前任务知识）
     policy:
-      optimizer_lr: 0.00002  # 最低学习率0.00002，最精细的调整
-      scheduler_warmup_steps: 300   # 最短warmup，快速适应
+      optimizer_lr: 2e-5 # 最低学习率2e-5，最精细调整多任务模型
+      scheduler_warmup_steps: 300 # 最短warmup，快速适应
       scheduler_decay_steps: 30000
 
   # Replay配置（最平衡的混合）
   replay:
-    task1_episodes: 20  # 10% 任务1
-    task2_episodes: 20  # 10% 任务2
-    task3_episodes: 40  # 20% 任务3
+    task1_episodes: 20 # 10% 任务1
+    task2_episodes: 20 # 10% 任务2
+    task3_episodes: 40 # 20% 任务3
     # 任务4占60%（由训练脚本自动计算）
-
 # 任务4训练完成后，将获得最终的多任务模型
 # 该模型应该能够通过language instruction执行所有4个任务
