Enhance SmolVLA configuration and evaluation scripts to support depth camera integration
- Added depth camera support configuration in smolvla_sequential_base.yaml, including depth features, resizing, and normalization range.
- Updated eval_smolvla_policy.py to incorporate multi-camera depth fusion processing, improving observation preprocessing.
- Extended SmolVLAConfigWrapper to include depth-related parameters and validation, ensuring compatibility with depth camera features.

--- a/configs/policy/smolvla_sequential_base.yaml
+++ b/configs/policy/smolvla_sequential_base.yaml
@@ -50,6 +50,15 @@ policy:
   resize_imgs_with_padding: [512, 512] # SmolVLA标准输入尺寸
   empty_cameras: 0 # 不使用空相机占位
 
+  # 深度相机支持配置
+  use_depth: True # 启用深度相机支持
+  depth_features:
+    - 'observation.depth_h'
+    - 'observation.depth_l'
+    - 'observation.depth_r'
+  depth_resize_with_padding: [512, 512] # 深度图像目标尺寸
+  depth_normalization_range: [0.0, 1000.0] # 深度值归一化范围
+
   # Flow Matching配置（SmolVLA使用Flow Matching而非Diffusion）
   num_steps: 10 # 推理时的去噪步数
 
