Update depth preprocessing functions and configuration for SmolVLA
Enhance depth preprocessing in eval_smolvla_policy.py and eval_kuavo.py to support resizing and padding while maintaining aspect ratio. Introduce a new depth preprocessing function specifically for SmolVLA. Update normalization settings in smolvla_sequential_base.yaml to include depth normalization. Additionally, fix feature type for depth in SmolVLAPolicyWrapper to ensure correct processing during training and evaluation.

--- a/configs/policy/smolvla_sequential_base.yaml
+++ b/configs/policy/smolvla_sequential_base.yaml
@@ -58,6 +58,9 @@ policy:
     VISUAL:
       _target_: lerobot.configs.types.NormalizationMode
       value: IDENTITY # SmolVLA内部处理图像归一化
+    DEPTH:
+      _target_: lerobot.configs.types.NormalizationMode
+      value: MEAN_STD # 深度图使用MEAN_STD归一化，参数形状为(c,1,1)
     STATE:
       _target_: lerobot.configs.types.NormalizationMode
       value: MEAN_STD
