--- a/configs/deploy/kuavo_smolvla_sim_env.yaml
+++ b/configs/deploy/kuavo_smolvla_sim_env.yaml
@@ -77,15 +77,15 @@ device: 'cuda' # or "cpu"
 #   - task4_sorting: Full process sorting
 task: 'task1_moving_grasp'
 method: 'smolvla_sequential'
-timestamp: 'run_20251013_160020' # Your actual training timestamp
-epoch: 10 # Test epoch 10 model (loss ~0.02)
+timestamp: 'run_20251015_120535' # Your actual training timestamp
+epoch: 6 # Test epoch 10 model (loss ~0.02)
 
 # ==================== Language Instruction Configuration ====================
 # SmolVLA uses language instructions to condition the policy
 # Change this based on which task you're evaluating
 
 # Task 1: Moving target grasping
-language_instruction: 'Pick up the moving object from the conveyor belt, place it on the table, and push it to the designated area'
+language_instruction: 'Grasp the object from the conveyor belt using visual guidance. Place it precisely at the first marked target location on the table. Then grasp it again and place it precisely at the second marked target location on the table.'
 
 # Task 2: Package weighing (uncomment to use)
 # language_instruction: "Pick up the package from the conveyor belt, weigh it on the electronic scale, then pick it up again and place it in the designated storage container"
