--- a/configs/policy/tasks/task1_moving_grasp.yaml
+++ b/configs/policy/tasks/task1_moving_grasp.yaml
@@ -10,8 +10,8 @@ task:
 
   # Language Instruction（英文，SmolVLA使用）
   # 这个instruction会在每个batch中作为任务条件输入模型
-  # 优化版本：明确描述目标位置的特征
-  language_instruction: 'Grasp the object from the conveyor belt using visual guidance. Place it precisely at the first marked target location on the table. Then grasp it again and place it precisely at the second marked target location on the table.'
+  # 优化版本：明确描述目标位置的特征，强调中心对齐
+  language_instruction: 'Grasp the object from the conveyor belt using visual guidance. Place it precisely at the first marked target location with the object center aligned to the marker center. Then grasp it again and place it precisely at the second marked target location with the object center perfectly aligned to the marker center.'
 
   # 数据配置
   data:
