--- a/configs/deploy/kuavo_smolvla_sim_env.yaml
+++ b/configs/deploy/kuavo_smolvla_sim_env.yaml
@@ -85,7 +85,7 @@ epoch: 3 # Test epoch 10 model (loss ~0.02)
 # Change this based on which task you're evaluating
 
 # Task 1: Moving target grasping
-language_instruction: 'Grasp the object from the conveyor belt using visual guidance. Place it precisely at the first marked target location on the table. Then grasp it again and place it precisely at the second marked target location on the table.'
+language_instruction: 'Grasp the object from the moving conveyor belt using visual guidance. Place it precisely at the center of the first colored target block on the table, ensuring the object center aligns with the target center. Then grasp it again and place it precisely at the center of the second colored target block on the table, maintaining visual alignment throughout the placement.'
 
 # Task 2: Package weighing (uncomment to use)
 # language_instruction: "Pick up the package from the conveyor belt, weigh it on the electronic scale, then pick it up again and place it in the designated storage container"
