Enhance depth processing capabilities and configuration for SmolVLA
- Added `use_depth_padding` option in multiple configuration files to support depth image processing with padding, improving aspect ratio preservation for high-precision tasks.
- Updated `depth_to_rgb_for_smolvla` function to include padding handling, allowing for flexible resizing methods.
- Enhanced documentation to recommend padding for high-accuracy applications, detailing the benefits of this approach in depth image processing.
- Adjusted multi-camera fusion implementation to utilize the new padding option, ensuring consistent depth handling across different modules.

--- a/configs/deploy/kuavo_smolvla_sim_env.yaml
+++ b/configs/deploy/kuavo_smolvla_sim_env.yaml
@@ -24,6 +24,7 @@ depth_range: [0, 1000] # Depth image clipping range (mm)
 image_size: [480, 640] # Original ROS topic image size
 target_image_size: [512, 512] # SmolVLA requires 512x512 (NOT 224x224!)
 ros_rate: 10 # Inference frequency (Hz)
+use_depth_padding: True # 深度图使用padding方式保持长宽比 (推荐用于高精度任务)
 
 # End-effector DOF configuration
 qiangnao_dof_needed: 1
