--- a/configs/policy/tasks/task1_moving_grasp.yaml
+++ b/configs/policy/tasks/task1_moving_grasp.yaml
@@ -10,8 +10,8 @@ task:
 
   # Language Instruction（英文，SmolVLA使用）
   # 这个instruction会在每个batch中作为任务条件输入模型
-  # 优化版本：强调视觉对齐和精确放置，解决目标物体中心线偏移问题
-  language_instruction: 'Grasp the object from the moving conveyor belt using visual guidance. Place it precisely at the center of the first colored target block on the table, ensuring the object center aligns with the target center. Then grasp it again and place it precisely at the center of the second colored target block on the table, maintaining visual alignment throughout the placement.'
+  # 优化版本：强调四个关键步骤和中心对齐约束
+  language_instruction: 'Step 1: Track and grasp the moving object from the conveyor belt with stable grip at object center. Step 2: Place the object precisely at the CENTER of the first colored target block on the table - ensure object center aligns exactly with target center, avoid edge placement. Step 3: Re-grasp the object securely from the first target position. Step 4: Place the object precisely at the CENTER of the second colored target block - maintain exact center-to-center alignment throughout placement. Critical: All placements must achieve center alignment, not edge or corner placement.'
 
   # 数据配置
   data:
