--- a/configs/policy/smolvla_sequential_base.yaml
+++ b/configs/policy/smolvla_sequential_base.yaml
@@ -117,6 +117,52 @@ training:
   validation_freq_epoch: 2 # 每2个epoch验证所有之前的任务
   validation_episodes: 20 # 更多验证episodes，评估更准确
 
+  # ==================== RGB数据增广配置 ====================
+  # 参考Diffusion策略的增广方式，但针对预训练VLM适度调整
+  # SmolVLA使用预训练的SigLIP视觉编码器，增广不宜过度激进
+  RGB_Augmenter:
+    enable: True # 启用数据增广
+    max_num_transforms: 1 # 每次最多应用1个变换（比Diffusion的1更保守）
+    random_order: True # 随机顺序应用
+    tfs:
+      notransform:
+        weight: 2.0 # 40%的时候不做任何变换（保护预训练知识）
+        type: 'Identity'
+        kwargs: {}
+      brightness:
+        weight: 1.0 # 亮度调整（相对温和）
+        type: 'ColorJitter'
+        kwargs: { 'brightness': [0.7, 1.3] } # 比Diffusion的[0.5,1.5]更保守
+      contrast:
+        weight: 1.0 # 对比度调整
+        type: 'ColorJitter'
+        kwargs: { 'contrast': [0.7, 1.3] }
+      saturation:
+        weight: 0.8 # 饱和度调整（权重稍低）
+        type: 'ColorJitter'
+        kwargs: { 'saturation': [0.7, 1.3] }
+      hue:
+        weight: 0.5 # 色调调整（权重更低，预训练模型对颜色敏感）
+        type: 'ColorJitter'
+        kwargs: { 'hue': [-0.03, 0.03] } # 比Diffusion的[-0.05,0.05]更保守
+      sharpness:
+        weight: 0.8 # 锐度调整
+        type: 'SharpnessJitter'
+        kwargs: { 'sharpness': [0.7, 1.3] }
+      gaussian_noise:
+        weight: 0.5 # 高斯噪声（权重较低，避免破坏视觉特征）
+        type: GaussianNoise
+        kwargs:
+          mean: 0.0
+          std: 0.03 # 比Diffusion的0.05更小
+      gamma_correction:
+        weight: 0.8 # 伽马校正（模拟光照变化）
+        type: GammaCorrection
+        kwargs:
+          gamma: [0.7, 1.3] # 比Diffusion的[0.5,2.0]更保守
+      # 注意：不使用 random_mask 和 random_border_cutout
+      # 因为这些会破坏图像完整性，对预训练VLM不友好
+
 # ==================== 顺序训练策略配置 ====================
 sequential:
   # 是否使用Replay Buffer（防遗忘的核心技术）
