Implement flexible vision layer freezing strategy in SmolVLA configuration
- Added a flexible vision layer freezing configuration to SmolVLA, allowing users to specify layers to unfreeze or freeze, or to set a freezing ratio.
- Updated the SmolVLAConfigWrapper to support new attributes for layer management and enhanced logging for clarity on the applied strategies.
- Integrated the flexible freezing logic into the SmolVLAPolicyWrapper, ensuring that the model adapts its training strategy based on the specified configuration.
- This update aims to improve model performance across various tasks by allowing tailored adjustments to the vision encoder's layers.

--- a/configs/policy/smolvla_sequential_base.yaml
+++ b/configs/policy/smolvla_sequential_base.yaml
@@ -35,6 +35,46 @@ policy:
   train_expert_only: False # 训练整个模型（VLM + Action Expert）
   train_state_proj: True # 训练state投影层
 
+  # ==================== 🆕 灵活的视觉层冻结策略 ====================
+  # SmolVLA视觉编码器共27层 (Layer 0-26)，详细说明见 docs/SMOLVLA_VISION_LAYERS_GUIDE.md
+  #
+  # 📚 层级功能概述：
+  # - Layer 0-8:   底层 - 通用视觉特征（边缘、纹理、形状）        [建议冻结]
+  # - Layer 9-17:  中层 - 语义特征（物体识别、空间关系）        [可选解冻]
+  # - Layer 18-26: 高层 - 任务特定特征（抓取点、动作关联）    [建议解冻]
+  #
+  # 🎯 配置方式（三选一，优先级从高到低）：
+  #
+  # 方式1: unfreeze_vision_layers - 指定要解冻的层（推荐）
+  #   支持负数索引: -1表示最后一层, -2表示倒数第二层
+  #   示例: [-1, -2, -3, -4, -5] 表示解冻最后5层
+  #
+  # 方式2: freeze_vision_layers - 指定要冻结的层
+  #   示例: [0, 1, 2, 3, 4, 5, 6, 7, 8] 表示冻结前9层
+  #
+  # 方式3: freeze_vision_ratio - 按比例冻结前N%的层（最简单）
+  #   示例: 0.75 表示冻结前75%的层（前20层）
+  #
+  # ⚠️  注意：如果不配置以下任何选项，将使用 freeze_vision_encoder 的默认行为
+
+  # 默认策略：解冻最后9层（高层任务特定特征）
+  # 这是针对机器人操作任务的推荐起点
+  unfreeze_vision_layers: [-1, -2, -3, -4, -5, -6, -7, -8, -9] # 解冻 Layer 18-26
+
+  # 其他可选策略（取消注释使用）：
+  #
+  # 保守策略（快速收敛，适合任务1）:
+  # freeze_vision_ratio: 0.67  # 冻结前67%（前18层），解冻后9层
+  #
+  # 平衡策略（中等适应，适合任务2-3）:
+  # unfreeze_vision_layers: [14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26]  # 解冻后13层
+  #
+  # 激进策略（最大适应，适合任务4或数据充足时）:
+  # freeze_vision_ratio: 0.33  # 冻结前33%（前9层），解冻后18层
+  #
+  # 精准策略（只解冻关键层）:
+  # unfreeze_vision_layers: [12, 13, 14, 18, 19, 20, 21, 22, 23, 24, 25, 26]  # 解冻中高层关键部分
+
   # 观测配置
   n_obs_steps: 1 # 使用当前帧（SmolVLA标准）
 
