--- a/configs/policy/tasks/task1_moving_grasp.yaml
+++ b/configs/policy/tasks/task1_moving_grasp.yaml
@@ -38,4 +38,20 @@ task:
       # 调度器
       scheduler_warmup_steps: 3000 # 更长warmup
       scheduler_decay_steps: 35000 # 更长衰减周期
+
+      # 🆕 任务1推荐的视觉层冻结策略（保守策略）
+      # 目标：快速收敛，充分利用预训练知识
+      # 策略：只解冻最后9层（高层任务特定特征）
+      unfreeze_vision_layers: [-1, -2, -3, -4, -5, -6, -7, -8, -9] # 解冻 Layer 18-26
+
+
+      # 为什么选择这个策略？
+      # 1. 任务1从预训练开始，底层和中层特征已经很好
+      # 2. 移动目标抓取需要适应"运动物体"，只需调整高层动作关联
+      # 3. 保守策略可以防止过拟合，提高泛化能力
+      # 4. 适合500 episodes的数据量
+
+      # 如果效果不佳，可以尝试：
+      # 更激进: unfreeze_vision_layers: [9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26]
+      # 更保守: unfreeze_vision_layers: [-1, -2, -3, -4, -5]  # 只解冻最后5层
 # 任务1没有replay配置（因为是第一个任务）
