--- a/configs/policy/tasks/task3_placement.yaml
+++ b/configs/policy/tasks/task3_placement.yaml
@@ -32,8 +32,27 @@ task:
     # 进一步降低学习率
     policy:
       optimizer_lr: 2.5e-5 # 进一步降低至2.5e-5，保护任务1+2知识
+      # 分层学习率
+      vision_encoder_lr: 2e-6 # 更低的视觉编码器学习率（从3e-6降到2e-6）
+      expert_lr: 1e-5 # 更低的Action Expert学习率（从1.5e-5降到1e-5）
       scheduler_warmup_steps: 500 # 短暂适应即可
       scheduler_decay_steps: 25000
+
+      # 🆕 任务3推荐的视觉层冻结策略（最保守）
+      # 目标：学习复杂的姿态摆放，同时保护任务1+2
+      # 策略：只解冻最后5层（最核心的任务特定层）
+      unfreeze_vision_layers: [-1, -2, -3, -4, -5] # 解冻 Layer 22-26
+
+      # 为什么选择这个策略？
+      # 1. 顺序学习的第3个任务，遗忘风险最高
+      # 2. 姿态摆放主要依赖高层动作规划，不需要改变底层特征
+      # 3. "标签面朝上"需要精确的抓取和放置，只需调整最高层
+      # 4. 最保守策略确保任务1和任务2的性能不下降
+
+      # 如果任务3效果不佳，可以稍微放宽:
+      # unfreeze_vision_layers: [-1, -2, -3, -4, -5, -6, -7]  # 解冻最后7层
+
+      # 警告：不建议解冻超过10层，否则可能严重遗忘任务1+2
 
   # Replay配置
   replay:
