--- a/configs/policy/tasks/task4_sorting.yaml
+++ b/configs/policy/tasks/task4_sorting.yaml
@@ -32,8 +32,35 @@ task:
     # 最低学习率（保持之前任务知识）
     policy:
       optimizer_lr: 2e-5 # 最低学习率2e-5，最精细调整多任务模型
+      # 分层学习率
+      vision_encoder_lr: 1.5e-6 # 最低的视觉编码器学习率（从2e-6降到1.5e-6）
+      expert_lr: 8e-6 # 最低的Action Expert学习率（从1e-5降到8e-6）
       scheduler_warmup_steps: 300 # 最短warmup，快速适应
       scheduler_decay_steps: 30000
+
+      # 🆕 任务4推荐的视觉层冻结策略（极度保守）
+      # 目标：整合所有任务，获得最终多任务模型
+      # 策略：只解冻最后3层（微调最顶层）
+      unfreeze_vision_layers: [-1, -2, -3] # 解冻 Layer 24-26
+
+      # 为什么选择这个策略？
+      # 1. 最后一个任务，目标是整合而非大幅改变模型
+      # 2. 前3个任务已经学习了丰富的视觉特征
+      # 3. 分拣任务涉及"移动+抓取+放置"，前面任务都有覆盖
+      # 4. 极度保守策略确保多任务模型的平衡性
+
+      # 替代策略（如果任务4效果不佳）:
+      #
+      # 选项1: 稍微放宽（解冻最后5层）
+      # unfreeze_vision_layers: [-1, -2, -3, -4, -5]
+      #
+      # 选项2: 不冻结视觉层（但使用极低学习率）
+      # unfreeze_vision_layers: null  # 不使用灵活冻结，依赖极低学习率
+      #
+      # 选项3: 全部冻结（只训练Action Expert和其他模块）
+      # freeze_vision_encoder: True  # 完全冻结视觉编码器
+
+      # ⚠️  警告：任务4是最终模型，建议多次实验对比不同策略的效果
 
   # Replay配置（最平衡的混合）
   replay:
