--- a/configs/policy/tasks/task2_weighing.yaml
+++ b/configs/policy/tasks/task2_weighing.yaml
@@ -32,8 +32,25 @@ task:
     # 降低学习率（防遗忘策略）
     policy:
       optimizer_lr: 3.5e-5 # 降低约30%至3.5e-5，保护任务1知识
+      # 分层学习率
+      vision_encoder_lr: 3e-6 # 进一步降低视觉编码器学习率（从5e-6降到3e-6）
+      expert_lr: 1.5e-5 # 降低Action Expert学习率（从2e-5降到1.5e-5）
       scheduler_warmup_steps: 800 # 模型已经warm，但仍需适应
       scheduler_decay_steps: 20000 # 延长decay
+
+      # 🆕 任务2推荐的视觉层冻结策略（更保守）
+      # 目标：适应称重任务，同时防止遗忘任务1
+      # 策略：冻结更多层，只解冻最后7层
+      unfreeze_vision_layers: [-1, -2, -3, -4, -5, -6, -7] # 解冻 Layer 20-26
+
+      # 为什么选择这个策略？
+      # 1. 顺序学习的第2个任务，需要保护任务1的知识
+      # 2. 称重任务的视觉理解与任务1类似（物体识别+位置）
+      # 3. 只解冻最高层来适应"电子秤"和"收纳筐"这些新物体
+      # 4. 更保守的策略可以减少灾难性遗忘
+
+      # 如果遗忘严重，可以更保守: unfreeze_vision_layers: [-1, -2, -3, -4, -5]
+      # 如果需要更好适应新任务: unfreeze_vision_layers: [-1, -2, -3, -4, -5, -6, -7, -8, -9]
 
   # Replay配置（防遗忘的关键）
   replay:
