--- a/configs/policy/smolvla_sequential_base.yaml
+++ b/configs/policy/smolvla_sequential_base.yaml
@@ -36,12 +36,14 @@ policy:
   train_state_proj: True # 训练state投影层
 
   # ==================== 🆕 灵活的视觉层冻结策略 ====================
-  # SmolVLA视觉编码器共27层 (Layer 0-26)，详细说明见 docs/SMOLVLA_VISION_LAYERS_GUIDE.md
+  # ⚠️  SmolVLA (SmolVLM2-500M) 视觉编码器共 12 层 (Layer 0-11)
+  # 详细说明见 docs/SMOLVLA_VISION_LAYERS_GUIDE.md
   #
-  # 📚 层级功能概述：
-  # - Layer 0-8:   底层 - 通用视觉特征（边缘、纹理、形状）        [建议冻结]
-  # - Layer 9-17:  中层 - 语义特征（物体识别、空间关系）        [可选解冻]
-  # - Layer 18-26: 高层 - 任务特定特征（抓取点、动作关联）    [建议解冻]
+  # 📚 层级功能概述（12层版本）：
+  # - Layer 0-2:   底层（3层，25%）- 通用视觉特征（边缘、纹理、形状）      [建议冻结]
+  # - Layer 3-5:   中底层（3层，25%）- 物体部件、材质识别              [可选解冻]
+  # - Layer 6-8:   中高层（3层，25%）- 完整物体、空间关系              [建议解冻]
+  # - Layer 9-11:  顶层（3层，25%）- 任务特定特征（抓取点、动作关联）  [必须解冻]
   #
   # 🎯 配置方式（三选一，优先级从高到低）：
   #
@@ -57,23 +59,28 @@ policy:
   #
   # ⚠️  注意：如果不配置以下任何选项，将使用 freeze_vision_encoder 的默认行为
 
-  # 默认策略：解冻最后9层（高层任务特定特征）
-  # 这是针对机器人操作任务的推荐起点
-  unfreeze_vision_layers: [-1, -2, -3, -4, -5, -6, -7, -8, -9] # 解冻 Layer 18-26
+  # 🎯 默认策略：平衡策略（解冻9层，适合1500-2500 episodes）
+  # 冻结前3层（25%），解冻后9层（75%）
+  unfreeze_vision_layers: [-1, -2, -3, -4, -5, -6, -7, -8, -9] # 解冻 Layer 3-11
 
-  # 其他可选策略（取消注释使用）：
+  # 📋 其他可选策略（根据数据量选择，取消注释使用）：
   #
-  # 保守策略（快速收敛，适合任务1）:
-  # freeze_vision_ratio: 0.67  # 冻结前67%（前18层），解冻后9层
+  # 🔹 保守策略（适合<1000 episodes）:
+  # unfreeze_vision_layers: [-1, -2, -3, -4, -5, -6]  # 解冻后6层（Layer 6-11）
+  # freeze_vision_ratio: 0.5  # 或用比例：冻结前50%
   #
-  # 平衡策略（中等适应，适合任务2-3）:
-  # unfreeze_vision_layers: [14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26]  # 解冻后13层
+  # 🔹 平衡偏保守策略（适合1000-1500 episodes）:
+  # unfreeze_vision_layers: [-1, -2, -3, -4, -5, -6, -7, -8]  # 解冻后8层（Layer 4-11）
   #
-  # 激进策略（最大适应，适合任务4或数据充足时）:
-  # freeze_vision_ratio: 0.33  # 冻结前33%（前9层），解冻后18层
+  # 🔹 激进策略（适合>2500 episodes）:
+  # unfreeze_vision_layers: [-1, -2, -3, -4, -5, -6, -7, -8, -9, -10]  # 解冻后10层（Layer 2-11）
+  # freeze_vision_ratio: 0.17  # 或用比例：冻结前17%
   #
-  # 精准策略（只解冻关键层）:
-  # unfreeze_vision_layers: [12, 13, 14, 18, 19, 20, 21, 22, 23, 24, 25, 26]  # 解冻中高层关键部分
+  # 🔹 极激进策略（适合>4000 episodes，几乎全部解冻）:
+  # unfreeze_vision_layers: [-1, -2, -3, -4, -5, -6, -7, -8, -9, -10, -11]  # 解冻11层（Layer 1-11）
+  #
+  # 🔹 精准策略（只解冻顶层和中高层）:
+  # unfreeze_vision_layers: [6, 7, 8, 9, 10, 11]  # 解冻中高层+顶层（6层）
 
   # 观测配置
   n_obs_steps: 1 # 使用当前帧（SmolVLA标准）
