Update smolvla_sequential_base.yaml and task1_moving_grasp.yaml for training configuration adjustments
- Added a comment to clarify the purpose of the train_state_proj parameter in smolvla_sequential_base.yaml.
- Modified episodes_to_use in task1_moving_grasp.yaml from [0, 499] to [0, 199] to limit the training episodes, potentially improving training efficiency.

--- a/configs/policy/smolvla_sequential_base.yaml
+++ b/configs/policy/smolvla_sequential_base.yaml
@@ -33,7 +33,7 @@ policy:
   # 冻结策略（防止灾难性遗忘的关键）
   freeze_vision_encoder: True
   train_expert_only: True
-  train_state_proj: True
+  train_state_proj: True # 训练state投影层
 
   # ==================== 🆕 灵活的视觉层冻结策略 ====================
   # ⚠️  SmolVLA (SmolVLM2-500M) 视觉编码器共 12 层 (Layer 0-11)
