--- a/configs/data/KuavoRosbag2Lerobot.yaml
+++ b/configs/data/KuavoRosbag2Lerobot.yaml
@@ -7,10 +7,10 @@ hydra: # Hydra 配置文件保存目录，仅供参数检查使用
 
 # kuavo rosbag数据转换成lerobot-parquet格式0配置文件
 rosbag:
-  rosbag_dir: /root/robot/data/TASK2-PackageWeighing # rosbag文件目录
+  rosbag_dir: /root/robot/data/temp # rosbag文件目录
   num_used: null # 使用的rosbag数量(若设置为任意数字，则会随机采样选择)
-  lerobot_dir: /root/robot/data/task-2 # 转换后的lerobot文件的保存目录
-  batch_size: 2000 # 每批处理的rosbag文件数量，会创建对应的子文件夹(如1-400, 401-800等)
+  lerobot_dir: /root/robot/data/task-3 # 转换后的lerobot文件的保存目录
+  batch_size: 1000 # 每批处理的rosbag文件数量，会创建对应的子文件夹(如1-400, 401-800等)
 
 dataset:
   only_arm: true # 默认true, 是否只使用手臂数据, 目前的模仿学习只用于手臂数据，选择true会自动屏蔽足关节数据
@@ -19,7 +19,7 @@ dataset:
   use_depth: true # 是否需要深度图像数据，与上面手臂保持一致的深度数据
   depth_range: [0, 1000] # 深度图的裁剪范围，单位：毫米
 
-  task_description: 'Task2' # 任务描述，自定义
+  task_description: 'Task3' # 任务描述，自定义
 
   train_hz: 10 # 训练数据的采样频率
   main_timeline: head_cam_h #将哪个相机设为主相机，默认主相机来自：head_cam_h, 可选：wrist_cam_l, wrist_cam_r
